--- a/style/style.css
+++ b/style/style.css
@@ -47,6 +47,7 @@ label img {
 
 input[type="checkbox"]:checked ~ form {
     display: flex;
+    height: 4em;
 } 
 
 /* ---------- */
@@ -56,8 +57,10 @@ input[type="checkbox"]:checked ~ form {
 form {
     display: flex;
     flex-basis: 100%;
-    height: 3em;
-    display: none;
+    height: 0em;
+    /* display: none; */
+    transition: .5s;
+    overflow: hidden;
 }
 
 form input {
