--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ header {
     border-bottom: 2px solid var(--primary-red);
     display: flex;
     justify-content: space-between;
-    margin-bottom: 2em;
+    /* margin-bottom: 1em; */
     flex-wrap: wrap;
 }
 
@@ -33,11 +33,11 @@ input[type="checkbox"] {
     display: none;
 }
 
-label {
+header label {
     align-self: center;
 }
 
-label img {
+header label img {
     width: 6em;
 }
 
@@ -45,7 +45,7 @@ label img {
 /* INPUT CHECKED */
 /* ------------- */
 
-input[type="checkbox"]:checked ~ form {
+header input[type="checkbox"]:checked ~ form {
     display: flex;
     height: 4em;
 } 
@@ -54,16 +54,15 @@ input[type="checkbox"]:checked ~ form {
 /* FORM STYLE */
 /* ---------- */
 
-form {
+header form {
     display: flex;
     flex-basis: 100%;
     height: 0em;
-    /* display: none; */
     transition: .5s;
     overflow: hidden;
 }
 
-form input {
+header form input {
     width: 100%;
     outline: none;
     border: none;
@@ -74,7 +73,7 @@ form input {
     max-height: 5em;
 }
 
-form button {
+header form button {
     /* padding: 2em; */
     background-color: var(--primary-red);
     outline: none;
@@ -96,14 +95,13 @@ article {
     /* background-color: #ccc; */
     margin-bottom: 1em;
     border-bottom: 1px solid #000;
+    max-width: 100vw;
 }
 
 article img {
     order: 1;
-    min-width: 10em;
     width: 10em;
-    height: 14em;
-    min-height: 14em;   
+    height: 14em;  
     object-fit: cover;
 }
 
@@ -112,6 +110,85 @@ article section {
     padding: 0 1em;
 }
 
+h2 {
+    font-size: 1em;
+}
+
 h1 {
     margin-bottom: 1em;
+}
+
+
+/* ------------- */
+/* FOOTER OPMAAK */
+/* ------------- */
+
+.calcButton {
+    position: fixed;
+    background-color: var(--primary-red);
+    border: none;
+    outline: none;
+    box-shadow: 1px 1px 10px #aaa;
+    padding: .5em;
+    color: var(--primary-white);
+    border-radius: .2em;
+    bottom: 1em;
+    left: 1em;
+    transition: 1s;
+    transition-property: left;
+}
+
+.calcButton img {
+    width: 3em;
+}
+
+main form label {
+    border-bottom: 1px solid var(--primary-white);
+    margin-bottom: 1em;
+}
+
+main form input {
+    margin-bottom: 1em;
+    font-size: 1.5em;
+    padding: .5em;
+    border: none;
+    outline: none;
+}
+
+main form button {
+    background: var(--primary-white);
+    border: none;
+    outline: none;
+    padding: 1em;
+    color: var(--primary-red);
+}
+
+main form {
+    display: flex;
+    flex-direction: column;
+    max-width: 20em;
+    padding: 1em;
+    background-color: var(--primary-red);
+    border-radius: .2em;
+    color: var(--primary-white);
+    position: fixed;
+    bottom: 1em;
+    left: -18em;
+    transition: 1s;
+    max-width: 18em;
+    transition-property: left;
+}
+
+main form h2 {
+    font-size: 1.5em;
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+#calculator:checked ~ label {
+    left: 20em;
+}
+
+#calculator:checked ~ form {
+    left: 1em;
 }
