--- a/style/style.css
+++ b/style/style.css
@@ -118,7 +118,7 @@ li {
     list-style-type: none;
 }
 
-ul:nth-child(2) li {
+ul:nth-of-type(2) li {
     display: flex;
     padding: 1em;
     /* background-color: #ccc; */
@@ -127,14 +127,14 @@ ul:nth-child(2) li {
     max-width: 100vw;
 }
 
-ul:nth-child(2) li img {
+ul:nth-of-type(2) li img {
     order: 1;
     width: 10em;
     height: 14em;  
     object-fit: cover;
 }
 
-ul:nth-child(2) li section {
+ul:nth-of-type(2) li section {
     order: 2;
     padding: 0 1em;
 }
@@ -332,7 +332,7 @@ main form h2 {
 }
 
 @media only screen and (min-width: 720px) {
-    ul:nth-child(2) {
+    ul:nth-of-type(2) {
         flex-wrap: wrap;
         display: flex;
         flex-direction: row;
@@ -341,7 +341,7 @@ main form h2 {
         justify-content: space-between;
     }
 
-    ul:nth-child(2) li {
+    ul:nth-of-type(2) li {
         flex-basis: 49%;
     }
   }
