--- a/style/style.css
+++ b/style/style.css
@@ -123,6 +123,7 @@ ul:nth-of-type(2) li {
     display: flex;
     padding: 1em;
     /* background-color: #ccc; */
+    margin: 0 auto;
     margin-bottom: 1em;
     border-bottom: 1px solid #000;
     max-width: 100vw;
