--- a/style/style.css
+++ b/style/style.css
@@ -172,6 +172,7 @@ ul:nth-of-type(2) li div {
     order: 2;
     padding: 0 1em;
     position: relative;
+    width: 100%;
 }
 
 ul:nth-of-type(2) h2 {
@@ -180,6 +181,10 @@ ul:nth-of-type(2) h2 {
     color: var(--primary-red);
     position: static;
     transform: none;
+}
+
+ul:nth-of-type(2) li div p {
+    padding-bottom: 5em;
 }
 
 ul:nth-of-type(2) a {
