--- a/style/style.css
+++ b/style/style.css
@@ -129,6 +129,10 @@ li {
     list-style-type: none;
 }
 
+h2 {
+    color: var(--primary-red);
+}
+
 section:nth-of-type(2) h2 {
     color: var(--primary-red);
 }
@@ -184,7 +188,11 @@ ul:nth-of-type(2) h2 {
 }
 
 ul:nth-of-type(2) li div p {
-    padding-bottom: 5em;
+    padding-bottom: 4em;
+}
+
+.results {
+    padding: 1em;
 }
 
 ul:nth-of-type(2) a {
