--- a/style/style.css
+++ b/style/style.css
@@ -133,6 +133,11 @@ h2 {
     color: var(--primary-red);
 }
 
+.results {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
 section:nth-of-type(2) h2 {
     color: var(--primary-red);
 }
