--- a/style/style.css
+++ b/style/style.css
@@ -168,6 +168,7 @@ ul:nth-of-type(2) li {
     margin-bottom: 1em;
     border-bottom: 1px solid #000;
     max-width: 100vw;
+    background-color: var(--primary-white);
 }
 
 ul:nth-of-type(2) li img {
