--- a/style/style.css
+++ b/style/style.css
@@ -114,7 +114,6 @@ header form input {
 }
 
 header form button {
-    /* padding: 2em; */
     background-color: var(--primary-red);
     outline: none;
     border: none;
@@ -143,6 +142,10 @@ h2 {
     margin: 0 auto;
 }
 
+/* ---------------- */
+/* ZERO STATE STYLE */
+/* ---------------- */
+
 section:nth-of-type(2) h2 {
     color: var(--primary-red);
 }
@@ -165,6 +168,10 @@ main section:nth-of-type(1) h2 {
 main section:nth-of-type(1) p {
     text-align: center;
 }
+
+/* --------------- */
+/* API DATA LOADED */
+/* --------------- */
 
 ul:nth-of-type(2) li {
     display: flex;
@@ -223,6 +230,10 @@ ul:nth-of-type(2) a:hover {
     background-color: var(--primary-red);
     color: var(--primary-white);
 }
+
+/* ----------------- */
+/* LOADING ANIMATION */
+/* ----------------- */
 
 ul:nth-of-type(1) {
     width: 8em;
